--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url = jdbc:mysql://localhost:3306/mydbtest
+spring.datasource.username = root
+spring.datasource.password = Vfrcbv12345
 
+# PUT, PATCH, DELETE
+spring.mvc.hiddenmethod.filter.enabled=true
+spring.jpa.show-sql=true
