--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/mydbtest
+spring.datasource.url = jdbc:mysql://localhost:3306/mydbtest1
 spring.datasource.username = root
 spring.datasource.password = Vfrcbv12345
 
 # PUT, PATCH, DELETE
 spring.mvc.hiddenmethod.filter.enabled=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
