--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,8 @@ spring.datasource.password = Vfrcbv12345
 
 # PUT, PATCH, DELETE
 spring.mvc.hiddenmethod.filter.enabled=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+logging.level.org.springframework=debug
+logging.level.org.hibernate=debug
